Fixed weird layout issues on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -253,9 +253,6 @@
   list-style: none;
   grid-column: 3;
   grid-row: 1;
-
-  > li {
-  }
 }
 
 .post-meta {
